--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,29 @@
-.headerContainer {
-    width: 100%;
-    height: 30em;
-  
-}
+
 
 .imagecontainer {
     width: 2em;
 }
 
 .sectionContainer {
-    margin-bottom: 2em;
+   
+    margin-top: -2em;
+    overflow: hidden;
+    height: 35em;
     
 }
+
+.headerTitle {
+    color: #fff;
+    font-size: 5em;
+}
+
+
+
+@media screen and (max-width: 555px) { 
+    .headerTitle {
+        
+        font-size: 3em;
+    }
+}
+
 
