--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -7,7 +7,7 @@
   
   .product {
     margin:  1em 1em;
-    text-align: center;
+    text-align: left;
   }
   
   
@@ -24,13 +24,15 @@
   .ctaContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .ctaLink {
-    background-color: #4E9F3D;
+    margin-left: .5em;
+    background-color: #5ca34e;
     padding: .75em 1.5em;
-    
+    font-size: .8em;
+    font-weight: 600;
     border-radius: 1em;
     cursor: pointer;
   }
