--- a/src/styles/ProductPage.module.css
+++ b/src/styles/ProductPage.module.css
@@ -40,7 +40,7 @@
 .ctaContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: right;
 
 }
 
@@ -91,16 +91,36 @@
 }
 
 .mainImageCont {
-    
     text-align: center;
     margin: auto;
 }
 
 
-
 .tinyImage {
-   
      margin: 0.5em;
+}
+
+
+.shippings {
+    margin-top: 3em;
+    display: flex;
+    justify-content: space-around;
+}
+
+.shippingCont {
+    background-color: #e7e7e7;
+    padding: 1em ;
+    border-radius: 1em;
+}
+
+.shipIcon {
+    font-size: 2.5em;
+    
+}
+
+.shipText {
+    padding-right: 2em;
+    font-weight: 600;
 }
 
 
@@ -122,6 +142,18 @@
         padding: .5em 1em;
     }
 
+    .shippings {
+        flex-direction: column;
+        justify-content: right;
+    }
+
+    .shippingCont { 
+        margin: 1em;
+    }
+
+    .shipText {
+        padding-right: 0;
+    }
 }
 
 
